cmake_minimum_required(VERSION 3.13)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(C
        sourceCode/coin.c
        sourceCode/demo1.c
        sourceCode/demo10.c
        sourceCode/demo11.c
        sourceCode/demo12.c
        sourceCode/demo13.c
        sourceCode/demo14.c
        sourceCode/demo15.c
        sourceCode/demo2_scanf.c
        sourceCode/demo3_CONST.c
        sourceCode/demo4_const_scanf.c
        sourceCode/demo5_plus.c
        sourceCode/demo6_height.c
        sourceCode/demo7_time.c
        sourceCode/demo8_avg.c
        sourceCode/demo9.c
        sourceCode/demo_sub.c
        sourceCode/factorial.c
        sourceCode/GCD.c
        sourceCode/hello.c
        sourceCode/hello2.c
        sourceCode/inverse.c
        sourceCode/prime.c
        sourceCode/prime2.c
        sourceCode/seq_number.c
        sourceCode/sizeof.c
        sourceCode/sum_func.c
        sourceCode/sum_func2.c
        sourceCode/unsigned.c)
